--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/boasVindas"
+        android:id="@+id/wellcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Seja bem vindo(a),\nUsername!"
@@ -57,12 +57,24 @@
         app:layout_constraintTop_toBottomOf="@id/logoInicio"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/catalog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Catalog"
+        android:textColor="@color/dark_blue"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/wellcome"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerLivrosInicio"
+        android:id="@+id/recyclerBooksMain"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/boasVindas"
+        app:layout_constraintTop_toBottomOf="@id/catalog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
