--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -11,7 +11,7 @@
     android:padding="20dp">
 
     <ImageView
-        android:id="@+id/minhaImagem"
+        android:id="@+id/mainImage"
         android:layout_width="120dp"
         android:layout_height="80dp"
         android:src="@drawable/logo_light"
@@ -26,7 +26,7 @@
         android:src="@drawable/avatar"
         android:layout_marginTop="48dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@+id/minhaImagem"
+        app:layout_constraintTop_toBottomOf="@+id/mainImage"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toEndOf="@+id/avatar" />
 
     <TextView
-        android:id="@+id/descricao"
+        android:id="@+id/description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Sua BIO aparece aqui"
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toEndOf="@+id/avatar" />
 
     <TextView
-        android:id="@+id/suaBiblioteca"
+        android:id="@+id/library"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sua biblioteca"
@@ -66,14 +66,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerLivros"
+        android:id="@+id/recyclerLibrary"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/suaBiblioteca"
+        app:layout_constraintTop_toBottomOf="@+id/library"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_livro" />
+        tools:listitem="@layout/item_book" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
